--- a/scr/styles/style.css
+++ b/scr/styles/style.css
@@ -57,7 +57,7 @@ input {
     margin-left: 5px;
 }
 
-p {
+.text {
     display: flex;
     justify-content: center;
 }
@@ -65,4 +65,18 @@ p {
 .delete {
     margin-top: 20px;
     font-size: 12px;
+}
+
+#bgrColor {
+    padding: 5px;
+    margin: 10px;
+    height: 35px;
+    border: 2px solid rgb(231, 75, 184);
+    border-radius: 20px;
+}
+
+.theme-text {
+    margin: 0;
+    padding: 0;
+    text-align: left;
 }
