--- a/scr/styles/style.css
+++ b/scr/styles/style.css
@@ -1,82 +1,124 @@
 body {
-    margin-top: 100px;
-    display: block;
-    background-color: rgb(213, 156, 165);
+  margin-top: 50px;
+  display: block;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: rgb(213, 156, 165);
 }
 
-button {
-    display: block;
-    padding: 20px;
-    margin: 0 auto;
-    background: linear-gradient(111.4deg, rgb(55, 168, 192) -0.2%, rgb(103, 187, 125) 100.2%);
-    color: white;
-    border: 3px solid greenyellow;
-    border-radius: 20px;
-    font-size: 30px;
+.btn {
+  display: block;
+  width: 4.5rem;
+  height: 4.5rem;
+  text-align: center;
+  background: linear-gradient(
+    111.4deg,
+    rgb(55, 168, 192) -0.2%,
+    rgb(103, 187, 125) 100.2%
+  );
+  color: white;
+  border: 3px solid greenyellow;
+  border-radius: 50px;
+  font-size: 30px;
 }
 
-button:hover {
-    background: linear-gradient(91.1deg, rgb(57, 31, 105) -2.3%, rgb(115, 43, 155) 44.4%, rgb(231, 75, 184) 103.4%);
-    border: 3px solid deeppink;
+.btn:hover {
+  background: linear-gradient(
+    91.1deg,
+    rgb(57, 31, 105) -2.3%,
+    rgb(115, 43, 155) 44.4%,
+    rgb(231, 75, 184) 103.4%
+  );
+  border: 3px solid darkblue;
 }
 
-button:active {
-    background: darkblue;
-    border: 3px solid deeppink;
+.btn:active {
+  background: rgb(72, 61, 139);
+  border: 3px solid deeppink;
 }
 
-.button-container {
-    width: 350px;
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
+.calculator {
+  width: 350px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  margin: 0 auto;
+  padding: 1rem;
+  border: 1px solid rgb(0, 0, 138);
+  border-radius: 25px;
+  background-color: deeppink;
 }
 
+.output {
+  grid-column: 1/5;
+  padding: 25px;
+  margin-bottom: 1rem;
+  font-size: 30px;
+  border: 1px solid darkblue;
+  border-radius: 25px;
+  background-color: deeppink;
+  color: white;
+  text-align: right;
+}
+
+.output:focus,
+.output:hover {
+  border: 1px solid greenyellow;
+  outline: none;
+}
+
+.equal {
+  grid-row: 3/7;
+  grid-column: 4/5;
+  width: auto;
+  height: auto;
+}
+
+/* 
 input {
-    display: flex;
-    margin: 0 auto 50px;
-    padding: 5px;
-    height: 35px;
-    border: 2px solid rgb(231, 75, 184);
-    border-radius: 20px;
+  display: flex;
+  margin: 0 auto 50px;
+  padding: 5px;
+  height: 35px;
+  border: 2px solid rgb(231, 75, 184);
+  border-radius: 20px;
 }
 
 .result-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
 
 .label-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #results {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 .text {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .delete {
-    margin-top: 20px;
-    font-size: 12px;
-}
+  margin-top: 20px;
+  font-size: 12px;
+} */
 
 #bgrColor {
-    padding: 5px;
-    margin: 10px;
-    height: 35px;
-    border: 2px solid rgb(231, 75, 184);
-    border-radius: 20px;
+  padding: 10px;
+  margin: 10px;
+  border: 2px solid rgb(231, 75, 184);
+  background-color: mistyrose;
+  border-radius: 20px;
 }
 
 .theme-text {
-    margin: 0;
-    padding: 0;
-    text-align: left;
+  margin: 0;
+  padding: 0;
+  text-align: left;
 }
